--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Embedded Menu</title>
 </head>
 <body style="margin: 0;">
-    <iframe src="https://mhme.nu/design/563bd6db-a145-4fbb-ad9b-da85cdb340a5" style="width: 100vw; height: 100vh; border: none;"></iframe>
+    <iframe src="https://mhme.nu/design/563bd6db-a145-4fbb-ad9b-da85cdb340a5" style="width: 1600px; height: 900px; border: none;"></iframe>
 </body>
 </html>
