--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embedded Menu</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
-<body style="margin: 0;">
-    <iframe src="https://mhme.nu/design/563bd6db-a145-4fbb-ad9b-da85cdb340a5" style="width: 1600px; height: 900px; border: none;"></iframe>
+<body>
+    <iframe src="https://mhme.nu/design/563bd6db-a145-4fbb-ad9b-da85cdb340a5"></iframe>
 </body>
 </html>
